# Autoxhs

./: .env.example  CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  restart.sh
.claude/: launch.json
.claude/skills/aligning-code-requirements/: SKILL.md
src/autoxhs/: __init__.py  __main__.py  cli.py  config.py
src/autoxhs/core/: __init__.py
tests/: test_cli.py
web/: .env.example  .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/business-expense/: page.tsx
web/app/employee/: page.tsx
web/app/image-compress/: page.tsx
web/app/indeed/: page.tsx
web/app/job-hunter/: AlignTab.tsx  TailorTab.tsx  page.tsx
web/app/login/: page.tsx
web/app/pdf-tools/: Convert.tsx  SignEditor.tsx  page.tsx
web/app/service-fee/: page.tsx
web/app/work-email/: page.tsx
web/app/xhs-engage/: page.tsx
web/app/xiaohongshu/: BatchPublish.tsx  Engage.tsx  page.tsx
web/lib/: clipboard.ts  openai.ts  prompt.ts  rateLimit.ts  schema.ts
web/lib/employee/: form.ts  i983.ts  repo.ts  storage.ts  validate.ts
web/lib/expense/: excel.ts  form.ts  parsePdf.ts  repo.ts  storage.ts  validate.ts
web/lib/imageCompress/: search.test.ts  search.ts
web/lib/indeed/: aiAnswer.ts  kb.test.ts  kb.ts  profile.ts  profileFields.ts  service.ts
web/lib/job-hunter/: align.test.ts  align.ts  docx.ts  fonts.ts  generate.ts  handoff.ts  parse.ts  pdf.tsx  prompt.ts  resumeHtml.ts  schema.ts
web/scripts/: copy-pdf-worker.mjs  engage-auto.sh  engageAuto.ts
(+155 files in other folders)
