[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoxhs"
dynamic = ["version"]
description = "Autoxhs — 小红书自动化工具(脚手架)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "11andyxz" }]
keywords = ["xiaohongshu", "xhs", "rednote", "automation"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
autoxhs = "autoxhs.cli:main"

[project.urls]
Homepage = "https://github.com/11andyxz/Autoxhs"
Repository = "https://github.com/11andyxz/Autoxhs"

[tool.hatch.version]
path = "src/autoxhs/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/autoxhs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
